Added DIMACS samples and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,30 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
+
+# Zip files (typically for large data)
+*.zip
