--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,13 @@ name = "pypi"
 pandas = "*"
 matplotlib = "*"
 argparse = "*"
+loguru = "*"
 
 [dev-packages]
 pipreqs = "*"
 ipdb = "*"
+pylint = "*"
+"autopep8" = "*"
 
 [requires]
 python_version = "3.6"
