--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ ipdb = "*"
 pylint = "*"
 "autopep8" = "*"
 line-profiler = "*"
+python-language-server = "*"
 
 [requires]
 python_version = "3.6"
